--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-mcrypt": "*",
         "nubs/bizgolf": "dev-master",
         "slim/slim": "~2.2",
-        "slim/extras": "~2.0",
+        "slim/views": "~0.1.0",
         "twig/twig": "~1.13",
         "cogpowered/finediff": "~0.0.1"
     }
