--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "slim/views": "~0.1.0",
         "twig/twig": "~1.13",
         "cogpowered/finediff": "~0.0.1",
-        "dflydev/markdown": "~1.0"
+        "dflydev/markdown": "~1.0",
+        "nesbot/carbon": "~1.2"
     }
 }
