--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "twig/twig": "~1.13",
         "cogpowered/finediff": "~0.0.1",
         "dflydev/markdown": "~1.0",
-        "nesbot/carbon": "~1.2"
+        "nesbot/carbon": "~1.2",
+        "kukulich/fshl": "~2.1"
     }
 }
